--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,18 @@
-@tailwind base;
+/* @tailwind base;
 @tailwind components;
-@tailwind utilities;
+@tailwind utilities; */
+
+.form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+input::-webkit-file-upload-button{
+    width: 60%;
+      background-color: "#b3b3b3";
+       padding: 15px;
+        border: 1px solid white;
+         border-radius: 4px;
+}
